<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/rowOrgSize"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="15dp"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="@string/text_org_size"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textOrgSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="@string/text_size_def_value"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <Spinner
            android:id="@+id/spinnerScale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_spinner"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rowOrgSize"
            tools:ignore="SpeakableTextPresentCheck" />

        <TableRow
            android:id="@+id/rowOutSize"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="15dp"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerScale">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="@string/text_op_size"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textOutSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="@string/text_size_def_value"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:id="@+id/textOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/text_or"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rowOutSize" />

        <TextView
            android:id="@+id/textOutSizeCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black"
            android:text="@string/text_custom_size"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textOr" />

        <TableRow
            android:id="@+id/rowOutSizeCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textOutSizeCustom">

            <EditText
                android:id="@+id/editCustomHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/bg_button"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/text_height"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/text_x"
                android:textColor="@color/black"
                android:textSize="25sp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/editCustomWidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/bg_button"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/text_width"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                tools:ignore="VisualLintTextFieldSize" />
        </TableRow>

        <LinearLayout
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rowOutSizeCustom">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="15dp"
                android:src="@mipmap/save"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/text_save_image"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>